# hello_shared_lib

./: CMakeLists.txt  README.md
exec1/: CMakeLists.txt  main.cpp
shared_lib/: CMakeLists.txt
shared_lib/inc/: foo.h
shared_lib/src/: foo.cpp
